# ecommerce-microservices

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHAT5_HANDOFF.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  INTERVIEW_PREP.md  README.md  docker-compose.override.yml  docker-compose.yml
api-gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api-gateway/app/: main.py
api-gateway/app/config/: settings.py
api-gateway/app/middleware/: auth.py
api-gateway/app/routes/: auth.py  health.py  notifications.py  orders.py  products.py  users.py
api-gateway/app/utils/: http_client.py
api-gateway/tests/: test_auth.py  test_gateway.py  test_health.py  test_http_client.py  test_main.py  test_settings.py  test_users.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: AppHeader.vue  NotificationToast.vue  ProductCard.vue
frontend/src/composables/: useNotifications.js
frontend/src/router/: index.js
frontend/src/services/: api.js  websocket.js
frontend/src/stores/: auth.js  cart.js
frontend/src/views/: AuthCallbackView.vue  CartView.vue  LoginView.vue  OrdersView.vue  ProductDetailView.vue  ProductsView.vue  RegisterView.vue
scripts/: init-databases.sql  setup-localstack.sh
services/notification-service/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/notification-service/alembic/: env.py
services/notification-service/alembic/versions/: a6dcff5f1f31_create_notifications_table.py
services/notification-service/app/: main.py  models.py  routes.py  schemas.py
services/notification-service/app/config/: settings.py
services/notification-service/app/events/: consumer.py
services/notification-service/app/services/: email_service.py
services/notification-service/app/templates/: order_confirmation.html  order_status_update.html
services/notification-service/app/websocket/: manager.py  routes.py
services/order-service/: .env.example  Dockerfile  EVENTS.md  README.md  alembic.ini  pyproject.toml
services/order-service/alembic/: env.py
services/order-service/alembic/versions/: 001_initial_create_orders_and_order_items.py
services/order-service/app/: database.py  main.py  models.py  routes.py  schemas.py  services.py
services/order-service/app/clients/: product_client.py
services/order-service/app/config/: settings.py
services/order-service/app/events/: consumer.py  publisher.py  schemas.py
services/order-service/tests/: test_product_client_manual.py
services/product-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/product-service/alembic/: env.py
services/product-service/alembic/versions/: 001_initial_migration_products_table.py
services/product-service/app/: main.py  models.py  routes.py  schemas.py
services/product-service/app/config/: settings.py
services/user-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/user-service/alembic/: env.py
services/user-service/alembic/versions/: 20788ad9ef68_initial_migration_create_users_table.py  a1b2c3d4e5f6_add_google_id_to_users.py
services/user-service/app/: auth.py  auth_google.py  database.py  main.py  models.py  routes.py  schemas.py
services/user-service/app/config/: settings.py
test-client/: websocket-test.html
